# GstUnityPlugin

./: LICENSE.md  README.md
Android/: clean.sh
Android/GStreamer/: build.sh
Android/jni/: Android.mk  (+1 more)
Plugin/: CMakeLists.txt
Plugin/Android/GStreamer/: build.sh  clean.sh
Plugin/Android/GStreamer/jni/: Android.mk  Application.mk
Plugin/Android/jni/: Android - Copy.mk  Android.mk  Application.mk
Plugin/Include/vulkan/: vulkan.cppm  vulkan.hpp  vulkan_core.h  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_static_assertions.hpp
Plugin/Source/: Dx11TextureController.cpp  GstUnityPlugin.cpp  UnityTextureController.cpp  VkTextureController.cpp  gl3w.c
Plugin/VS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GstUnityPlugin.sln  GstUnityPlugin.vcxproj  GstUnityPlugin.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Plugin/VS/Debug/: GstUnityPlugin.exp
Plugin/VS/GstUnityPlugin.dir/Debug/: GstUnityPlugin.dll.recipe
Plugin/VS/GstUnityPlugin.dir/Debug/GstUnityPlugin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Plugin/VS/GstUnityPlugin.dir/Release/: GstUnityPlugin.dll.recipe
Plugin/VS/GstUnityPlugin.dir/Release/GstUnityPlugin.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Plugin/VS/Release/: GstUnityPlugin.exp  GstUnityPlugin.lib
Plugin/VS/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Plugin/VS/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Plugin/VS/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
Plugin/VS/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
Plugin/VS/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Plugin/VS/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
Plugin/include/: GstStreamController.h  GstUnityLogger.h  GstUnityPlugin.h  PlatformBase.h  UnityTextureController.h
Plugin/include/Unity/: IUnityGraphics.h  IUnityGraphicsVulkan.h
Plugin/include/vulkan/: vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_raii.hpp  vulkan_to_string.hpp
Plugin/source/: GlTextureController.cpp
UnityProject/: .gitignore
source/: GstStreamController.cpp  GstUnityLogger.cpp  VkTextureController.cpp  gl3w.c
(+20 files in other folders)
